# chrisIM_rust

./: .env  Cargo.toml  Dockerfile  LICENSE  README-consul.md  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: main.yml
api-gateway/: Cargo.toml  README.md
api-gateway/config/: gateway.yaml
api-gateway/src/: main.rs
api-gateway/src/auth/: api_key.rs  jwt.rs  middleware.rs  mod.rs  oauth2.rs
api-gateway/src/config/: auth_config.rs  mod.rs
api-gateway/src/metrics/: mod.rs
api-gateway/src/proxy/: grpc_client.rs  http_client.rs  service_proxy.rs
api-gateway/src/rate_limit/: mod.rs
api-gateway/src/tracing/: mod.rs
auth-service/: Cargo.toml  Dockerfile
auth-service/k8s/: configmap.yaml  deployment.yaml
auth-service/src/: main.rs
auth-service/src/repository/: mod.rs  token_repository.rs
auth-service/src/service/: auth_service.rs
cache/: Cargo.toml
cache/src/: lib.rs
cache/src/redis/: mod.rs
common/: Cargo.toml  build.rs
common/proto/: auth.proto  friend.proto  group.proto  group_message.proto  message_gateway.proto  private_message.proto  user.proto
common/src/: config.rs  error.rs  lib.rs  models.rs  proto.rs  service_registry.rs  utils.rs
common/src/types/: friend.rs  msg.rs
config/: config.yaml
docs/: DDL.sql
friend-service/: Cargo.toml
friend-service/src/: main.rs
friend-service/src/model/: friendship.rs  mod.rs
friend-service/src/repository/: friendship_repository.rs  mod.rs
friend-service/src/service/: friend_service.rs  mod.rs
gateway-service/: Cargo.toml  README.md
gateway-service/src/: main.rs
gateway-service/src/auth/: api_key.rs  error.rs  jwt.rs  middleware.rs  mod.rs
gateway-service/src/circuit_breaker/: mod.rs
gateway-service/src/config/: rate_limit_config.rs  routes_config.rs
gateway-service/src/proxy/: mod.rs  utils.rs
gateway-service/src/router/: mod.rs
group-service/: Cargo.toml
group-service/src/: main.rs
group-service/src/model/: group.rs  member.rs  mod.rs
group-service/src/repository/: group_repository.rs  member_repository.rs  mod.rs
group-service/src/service/: group_service.rs
msg-gateway/: Cargo.toml
msg-gateway/src/: client.rs  main.rs  manager.rs  rpc.rs  ws_server.rs
msg-server/: Cargo.toml
msg-server/src/: consumer.rs  lib.rs  main.rs  productor.rs
msg-server/src/pusher/: mod.rs  service.rs
oss/: Cargo.toml
oss/src/: client.rs  lib.rs
scripts/: build.sh  docker-entrypoint.sh  linux-build.sh  macos-build.sh  start-all.sh  stop-all.sh  windows-build.bat
user-service/: Cargo.toml
user-service/src/: main.rs
user-service/src/model/: user.rs
user-service/src/repository/: user_repository.rs
user-service/src/service/: mod.rs  user_service.rs
