[workspace]
resolver = "2" # 使用 Cargo v2 依赖解析
members = [
    "common",
    "cache",
    "auth-service",
    "user-service",
    "group-service",
    "friend-service",
    "oss",
    "msg-server",
    "msg-gateway",
    "api-gateway"
]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.8.1"
axum-server = "0.7.2"
tonic = "0.11.0"
prost = "0.12"
prost-types = "0.12.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.32"
bincode = "2.0.1"
redis = { version = "0.29.2", features = ["tokio-comp"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0.12"
dotenv = "0.15"
jsonwebtoken = "9.2"
bcrypt = "0.17.0"
async-trait = "0.1"
# 为Windows环境提供动态链接选项，默认使用cmake-build
rdkafka = { version = "0.37.0", features = ["cmake-build"] }  # Kafka客户端
futures = "0.3"
config = "0.15.11"
clap = { version = "4", features = ["derive"] }
metrics = "0.24.1"
prometheus = "0.13"
tokio-tungstenite = "0.26.2" # WebSocket for message gateway
reqwest = { version = "0.12.15", features = ["json"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace", "cors", "auth"] }
http-body-util = "0.1"
rand = "0.9.0"
aws-sdk-s3 = { version = "1.8.3", features = ["rt-tokio"] }