[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
jsonwebtoken = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true } 
axum-server = {workspace = true}
aws-sdk-s3 = { version = "1.4.0", features = ["rt-tokio"] }
