[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
dotenv = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true, features = ["yaml", "toml", "json"] }
reqwest = { workspace = true, features = ["json"] }
bcrypt = { workspace = true }
# 配置监听
notify = { version = "5.1.0", optional = true }

[features]
default = []
dynamic-config = ["notify"]

[build-dependencies]
tonic-build = "0.13.0"