[package]
name = "gateway-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
axum = { workspace = true, features = ["macros"] }
hyper = { version = "1.6.0", features = ["full"] }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full", "cors", "trace", "timeout", "limit", "auth"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
dotenv = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
http-body-util = { version = "0.1" }
axum-server = { workspace = true, features = ["tls-rustls"] }
tokio-signal = "0.2.9"
rand = { workspace = true, features = ["small_rng"] }

# 限流相关
tower_governor = "0.7.0"
governor = "0.9.0"

# 监控相关
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"

# 链路追踪
tracing-opentelemetry = "0.30.0"
opentelemetry = { version = "0.29.0" }
opentelemetry-jaeger = { version = "0.22.0", features = ["rt-tokio"] }

# JWT认证
jwt-authorizer = "0.15.0"

# 配置动态更新
config = { version = "0.15.11", features = ["toml", "json", "yaml"] }
notify = "8.0.0"
once_cell = "1.19.0"
serde_yaml = "0.9.25"

# 内存缓存
lru = "0.13.0"
parking_lot = "0.12.1"

# 其他依赖
regex = "1.9.5"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.30"
