[package]
name = "msg-server"
version = "0.1.0"
edition = "2021"


[dependencies]
common = { path = "../common" }
cache = { path = "../cache" }

async-trait = "0.1.80"
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
dashmap = "5.5.3"
futures = "0.3.30"
nanoid = "0.4.0"
rdkafka = { version = "0.36.2" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

[features]
static = ["rdkafka/cmake-build"]
dynamic = ["rdkafka/dynamic-linking"]
