[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
bcrypt = { workspace = true }
dotenv = { workspace = true }
anyhow = { workspace = true }
config = { workspace = true }
clap = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true } 
axum-server = {workspace = true}
prost-types = { workspace = true }
